frameworks/main/default/objects/Queueable_Chain_Config__mdt/Queueable_Chain_Config__mdt.object-meta.xml
<CustomObject>
    <label>Queueable Chain Configuration</label>
    <pluralLabel>Queueable Chain Configurations</pluralLabel>
</CustomObject>