frameworks/main/default/objects/Queueable_Chain_Config__mdt/fields/Continue_On_Failure__c.field-meta.xml
<CustomField>
    <fullName>Continue_On_Failure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to continue chain if this queueable fails</description>
    <inlineHelpText>Whether to continue chain if this queueable fails</inlineHelpText>
    <label>Continue On Failure</label>
    <type>Checkbox</type>
</CustomField>