frameworks/main/default/objects/Queueable_Chain_Config__mdt/fields/Current_Queueable__c.field-meta.xml
<CustomField>
    <fullName>Current_Queueable__c</fullName>
    <description>The current queueable class name (Primary Key)</description>
    <inlineHelpText>The current queueable class name (Primary Key)</inlineHelpText>
    <label>Current Queueable</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>