frameworks/main/default/objects/Queueable_Chain_Config__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Description of the queueable job</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>