frameworks/main/default/objects/Queueable_Chain_Config__mdt/fields/Execution_Delay__c.field-meta.xml
<CustomField>
    <fullName>Execution_Delay__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Delay in minutes before executing next queueable</description>
    <inlineHelpText>Delay in minutes before executing next queueable</inlineHelpText>
    <label>Execution Delay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>