frameworks/main/default/objects/Queueable_Chain_Config__mdt/fields/Max_Retries__c.field-meta.xml
<CustomField>
    <fullName>Max_Retries__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Max Retries</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>