frameworks/main/default/objects/Queueable_Chain_Config__mdt/fields/Next_Queueable__c.field-meta.xml
<CustomField>
    <fullName>Next_Queueable__c</fullName>
    <description>The next queueable class name in the chain</description>
    <inlineHelpText>The next queueable class name in the chain</inlineHelpText>
    <label>Next Queueable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>