frameworks/main/default/objects/Queueable_Chain_Config__mdt/fields/Use_Finalizer__c.field-meta.xml
<CustomField>
    <fullName>Use_Finalizer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether to use finalizer for chain continuation</inlineHelpText>
    <label>Use Finalizer</label>
    <type>Checkbox</type>
</CustomField>