frameworks/main/default/objects/Queueable_Chain_Config__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Current_Queueable__c</columns>
    <columns>Next_Queueable__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Use_Finalizer__c</columns>
    <columns>Continue_On_Failure__c</columns>
    <columns>Execution_Delay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>